feat: Add FontService to settings-utils library

--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,31 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "settings-utils": {
+      "projectType": "library",
+      "root": "projects/settings-utils",
+      "sourceRoot": "projects/settings-utils/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:ng-packagr",
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/settings-utils/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/settings-utils/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "projects/settings-utils/tsconfig.spec.json"
+          }
+        }
+      }
+    }
   }
 }
