feat(settings-utils): upgrade to Vitest for testing and enhance FontSizeService
- Replaced Jasmine/Karma with Vitest for testing framework.
- Updated package.json scripts for testing with Vitest.
- Enhanced FontSizeService with full reactive capabilities using signals and computed properties.
- Added configuration options for min/max/default font sizes, step, storage key, and CSS variable.
- Implemented automatic localStorage persistence for font size.
- Created comprehensive unit tests for FontSizeService.
- Updated CHANGELOG and README to reflect new features and usage instructions.
- Removed obsolete TypeScript configuration for specs.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "compileOnSave": false,
-  "compilerOptions": {
+	"compilerOptions": {
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -11,14 +11,17 @@
     "skipLibCheck": true,
     "isolatedModules": true,
     "experimentalDecorators": true,
+    "target": "ES2022",
+    "module": "preserve",
+    "importHelpers": true,
+    "types": [
+      "vitest/globals"
+    ],
     "paths": {
       "settings-utils": [
         "./dist/settings-utils"
       ]
-    },
-    "importHelpers": true,
-    "target": "ES2022",
-    "module": "preserve"
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -32,8 +35,5 @@
     {
       "path": "./projects/settings-utils/tsconfig.lib.json"
     },
-    {
-      "path": "./projects/settings-utils/tsconfig.spec.json"
-    }
   ]
 }
