--- a/package.json
+++ b/package.json
@@ -34,12 +34,22 @@
     "@angular/build": "^20.1.6",
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.0",
+		"@typescript-eslint/eslint-plugin": "^8.35.0",
+    "angular-eslint": "20.1.1",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "@testing-library/angular": "^18.0.0",
     "@testing-library/jest-dom": "^6.7.0",
     "@vitest/coverage-v8": "^3.2.4",
     "jsdom": "^26.1.0",
     "ng-packagr": "^20.1.0",
     "typescript": "~5.8.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+		"prettier": "^3.5.3",
+    "prettier-eslint": "^16.4.2"
   }
 }
