--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
       "@su-labs/scroll-spy": [
         "./dist/su-labs/scroll-spy"
       ],
+      "@su-labs/theme": [
+        "./dist/su-labs/theme"
+      ],
       "@su-labs/visit-tracker": [
         "./dist/su-labs/visit-tracker"
       ],
@@ -59,5 +62,8 @@
     {
       "path": "./projects/su-labs/visit-tracker/tsconfig.lib.json"
     },
+    {
+      "path": "./projects/su-labs/theme/tsconfig.lib.json"
+    }
   ]
 }
