--- a/projects/su-labs/visit-tracker/package.json
+++ b/projects/su-labs/visit-tracker/package.json
@@ -1,12 +1,39 @@
 {
-  "name": "@su-labs/visit-tracker",
-  "version": "1.0.0",
-  "peerDependencies": {
-    "@angular/common": "^20.1.0",
-    "@angular/core": "^20.1.0"
-  },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
-  "sideEffects": false
+	"name": "@su-labs/visit-tracker",
+	"version": "1.0.1",
+	"keywords": [
+		"angular",
+		"user-tracking",
+		"visit-tracker",
+		"localStorage",
+		"milestones",
+		"signals",
+		"reactive",
+		"utility",
+		"service",
+		"metrics"
+	],
+	"peerDependencies": {
+		"@angular/common": "^20.1.0",
+		"@angular/core": "^20.1.0"
+	},
+	"dependencies": {
+		"tslib": "^2.3.0"
+	},
+	"homepage": "https://github.com/Greezaaa/settings-utils-lib/tree/main/projects/su-labs/font-size#readme",
+	"author": {
+		"name": "Yevheniy Alekseyev",
+		"email": "yev.alekseyev@gmail.com",
+		"url": "https://github.com/Greezaaa"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Greezaaa/settings-utils-lib.git",
+		"directory": "projects/su-labs/font-size"
+	},
+	"bugs": {
+		"url": "https://github.com/Greezaaa/settings-utils-lib/issues"
+	},
+	"license": "MIT",
+	"sideEffects": false
 }
