--- a/projects/su-labs/theme/package.json
+++ b/projects/su-labs/theme/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@su-labs/theme",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"keywords": [
 		"angular",
 		"theme",
@@ -32,7 +32,6 @@
 	"bugs": {
 		"url": "https://github.com/Greezaaa/settings-utils-lib/issues"
 	},
-	"license": "MIT",
 	"peerDependencies": {
 		"@angular/common": "^20.1.0",
 		"@angular/core": "^20.1.0"
@@ -40,5 +39,6 @@
 	"dependencies": {
 		"tslib": "^2.3.0"
 	},
-	"sideEffects": false
+	"sideEffects": false,
+	"license": "MIT"
 }
